tests/invalid-syntax/54394_bad_function_header/bad_function_header.agu
-- Author: 54394, Afonso Esteves

let faulty (n) : (Int, Int) -> Int =
    n * 2

